market-table.html

--- a/market-table.html
+++ b/market-table.html
@@ -26,6 +26,7 @@
         <select id="timeframe">
           <option value="daily">Daily</option>
           <option value="hourly">Hourly</option>
+          <button class="btn" id="refreshBtn" type="button" style="margin-left:10px">Refresh</button>
         </select>
       </div>
       <div>
