--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@ button:hover{filter:brightness(1.05)}
 <nav>
   <div class="navwrap">
     <a class="brand" href="index.html">QuickLot</a>
-    <a href="market-table.html">Market Table</a>
-    <a href="premium.html">Premium</a>
-    <a href="terms.html">Terms</a>
-    <a href="about.html">About</a>
+    <a href="market-table.html" data-nav="market-table">Market Table</a>
+    <a href="premium.html" data-nav="premium">Premium</a>
+    <a href="terms.html" data-nav="terms">Terms</a>
+    <a href="about.html" data-nav="about">About</a>
   </div>
 </nav>
 <div class="container">
