--- a/market-table.html
+++ b/market-table.html
@@ -151,5 +151,17 @@ loadData();
 
 </script>
 <script>document.getElementById('y').textContent=new Date().getFullYear()</script>
+  <script>
+  // mark active link by URL
+  (function(){
+    const path = location.pathname.split('/').pop() || 'index.html';
+    document.querySelectorAll('nav a[href]').forEach(a=>{
+      const href = a.getAttribute('href');
+      if ((path==='index.html' && href==='index.html') || href===path){
+        a.classList.add('active');
+      }
+    });
+  })();
+</script>
 </body>
 </html>
