--- a/market-table.html
+++ b/market-table.html
@@ -4,21 +4,25 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Market Table – QuickLot</title>
-<link rel="stylesheet" href="style.css?v=3">
+<link rel="stylesheet" href="style.css?v=6">
+<!-- OG/Icons אופציונלי אם כבר הוספת בכל העמודים -->
 </head>
 <body>
+
+<!-- NAV -->
 <nav>
   <div class="navwrap">
     <a class="brand" href="index.html">QuickLot</a>
-    <a href="market-table.html" data-nav="market-table">Market Table</a>
-    <a href="premium.html" data-nav="premium">Premium</a>
-    <a href="terms.html" data-nav="terms">Terms</a>
-    <a href="about.html" data-nav="about">About</a>
+    <a href="market-table.html" class="active">Market Table</a>
+    <a href="premium.html">Premium</a>
+    <a href="terms.html">Terms</a>
+    <a href="about.html">About</a>
   </div>
 </nav>
 
 <div class="container">
   <h1>Market Table</h1>
+
   <div class="card">
     <div class="grid cols-2">
       <div>
@@ -26,15 +30,19 @@
         <select id="timeframe">
           <option value="daily">Daily</option>
           <option value="hourly">Hourly</option>
-          <button class="btn" id="refreshBtn" type="button" style="margin-left:10px">Refresh</button>
         </select>
       </div>
-      <div>
-        <label for="tblSearch" class="subtle">Search</label>
-        <input id="tblSearch" placeholder="Type to filter e.g. MNQ, MES, MGC">
+      <div style="display:flex; gap:8px; align-items:flex-end">
+        <div style="flex:1">
+          <label for="tblSearch" class="subtle">Search</label>
+          <input id="tblSearch" placeholder="Type to filter e.g. MNQ, MES, MGC">
+        </div>
+        <button class="btn" id="refreshBtn" type="button">Refresh</button>
       </div>
     </div>
+
     <div class="hr"></div>
+
     <div style="overflow:auto">
       <table class="table" id="marketTable">
         <thead>
@@ -50,14 +58,15 @@
         <tbody></tbody>
       </table>
     </div>
-    <p class="subtle">Tip: Use the search box to quickly filter. You can switch Daily/Hourly above.</p>
+
+    <p class="subtle">Tip: Use search to filter. Switch Daily/Hourly above. Data loads from <code>market.json</code>.</p>
   </div>
 </div>
 
 <footer>© <span id="y"></span> QuickLot — For calculation purposes only. No financial advice.</footer>
 
 <script>
-
+// ====== symbol names (אפשר להרחיב כרצונך) ======
 const SYMBOL_META = {
   MES:{name:"Micro E-mini S&P 500"},
   MNQ:{name:"Micro E-mini Nasdaq-100"},
@@ -66,10 +75,11 @@ const SYMBOL_META = {
   MGC:{name:"Micro Gold"},
   MCL:{name:"Micro Crude Oil"}
 };
-// אם תרצה לחשב $ אוטומטית כשאין usd:
+
+// אם אין usd ב-market.json נחסם אוטומטית לפי ערך טיק:
 const TICK_VALUE = { MES:1.25, MNQ:0.50, MYM:0.50, M2K:0.50, MGC:1.00, MCL:1.00 };
 
-// state
+// ====== state ======
 let DATA = { daily:{}, hourly:{} };
 
 const $ = s => document.querySelector(s);
@@ -77,21 +87,25 @@ const tbody = $('#marketTable tbody');
 const tfSel = $('#timeframe');
 const searchEl = $('#tblSearch');
 
-function fmtNum(v){
-  return (v==null || !isFinite(v)) ? '—'
-    : (Math.abs(v)>=1000 ? v.toLocaleString(undefined,{maximumFractionDigits:2})
-                         : (+v).toFixed(3).replace(/\.?0+$/,''));
+(function loadPrefs(){
+  try{
+    const tf = localStorage.getItem('quicklot:tblTF'); if(tf) tfSel.value = tf;
+    const q  = localStorage.getItem('quicklot:tblQ');  if(q) searchEl.value = q;
+  }catch(e){}
+})();
+function savePrefs(){
+  try{
+    localStorage.setItem('quicklot:tblTF', tfSel.value);
+    localStorage.setItem('quicklot:tblQ', searchEl.value);
+  }catch(e){}
 }
 
-function savePrefs(){ try{
-  localStorage.setItem('quicklot:tblTF', tfSel.value);
-  localStorage.setItem('quicklot:tblQ', searchEl.value);
-} catch(e){} }
-
-(function loadPrefs(){ try{
-  const tf = localStorage.getItem('quicklot:tblTF'); if(tf) tfSel.value = tf;
-  const q  = localStorage.getItem('quicklot:tblQ');  if(q) searchEl.value = q;
-} catch(e){} })();
+// ====== render ======
+function fmtNum(v){
+  return (v==null || !isFinite(v)) ? '—'
+    : (Math.abs(v)>=1000 ? Number(v).toLocaleString(undefined,{maximumFractionDigits:2})
+                         : Number(v).toFixed(3).replace(/\.?0+$/,''));
+}
 
 function render(){
   const tf = tfSel.value;
@@ -129,11 +143,11 @@ function render(){
   savePrefs();
 }
 
+// ====== data load from market.json ======
 async function loadData(){
-  // הודעת טעינה קטנה
   tbody.innerHTML = `<tr><td colspan="6" class="subtle">Loading market.json…</td></tr>`;
   try{
-    const res = await fetch('market.json', {cache:'no-cache'});
+    const res = await fetch('market.json?v=' + Date.now(), {cache:'no-cache'});
     if(!res.ok) throw new Error('HTTP '+res.status);
     const j = await res.json();
     DATA = { daily: j.daily||{}, hourly: j.hourly||{} };
@@ -144,24 +158,15 @@ async function loadData(){
   render();
 }
 
+// events
 tfSel.addEventListener('change', render);
 let t; searchEl.addEventListener('input', ()=>{ clearTimeout(t); t=setTimeout(render,120); });
+document.getElementById('refreshBtn').addEventListener('click', loadData);
 
+// init
 loadData();
+document.getElementById('y').textContent=new Date().getFullYear();
+</script>
 
-</script>
-<script>document.getElementById('y').textContent=new Date().getFullYear()</script>
-  <script>
-  // mark active link by URL
-  (function(){
-    const path = location.pathname.split('/').pop() || 'index.html';
-    document.querySelectorAll('nav a[href]').forEach(a=>{
-      const href = a.getAttribute('href');
-      if ((path==='index.html' && href==='index.html') || href===path){
-        a.classList.add('active');
-      }
-    });
-  })();
-</script>
 </body>
 </html>
